# advent-of-code-2024-rs

./: Cargo.toml  README.md
day-01/: Cargo.toml
day-01/data/: input.csv
day-02/: Cargo.toml
day-03/: Cargo.toml
day-04/: Cargo.toml
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/src/: main.rs
day-09/: Cargo.toml
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/data/: input.csv  test.csv
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/data/input/: map.csv  moves.csv
day-15/data/test/: moves.csv
day-15/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/data/: input.csv
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/data/input/: rules.csv
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
utils/: Cargo.toml
utils/data/: testString.csv
utils/src/: lib.rs
