[package]
name = "day8"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
